--- a/index.html
+++ b/index.html
@@ -510,6 +510,7 @@
 
     <!-- ================ SCROLL REVEAL ================= -->
 
+    <script src="scrollreveal.min.js"></script>
 
     <!-- ================== SWIPER JS ==================== -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
